ovf/fixtures/external/OVFToolTemplates/OVF/xmltestfiles/Envelope_1_0/Pos/section_compatibility_rec.ovf
<?xml version="1.0" encoding="UTF-8"?>
<ovf:Envelope xmlns="http://schemas.dmtf.org/ovf/envelope/1" xmlns:cim="http://schemas.dmtf.org/wbem/wscim/1/common" xmlns:ovf="http://schemas.dmtf.org/ovf/envelope/1" xmlns:rasd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData" xmlns:vmw="http://www.vmware.com/schema/ovf" xmlns:vssd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <References>
        <File ovf:size="329197568"  ovf:href="../../../vmdk/valid_disk.vmdk"  ovf:id="file1" ></File>
    </References>
    <DiskSection>
        <Info>Describes the set of virtual disks</Info>
        <Disk ovf:capacity="329197568"  ovf:format="http://www.vmware.com/interfaces/specifications/vmdk.html#streamOptimized"  ovf:diskId="vmdisk1"  ovf:fileRef="file1" ></Disk>
	<UnknownElement ovf:required="false" >
		
		<UknownChildElement ovf:required="true" ></UknownChildElement>
	</UnknownElement>
    </DiskSection>
    <VirtualSystem ovf:id="PTC01_VM" >
        <Info/>
	<OperatingSystemSection ovf:id="36" >
		<Info></Info>
	</OperatingSystemSection>
	<VirtualHardwareSection ovf:required="true" >
		<Info></Info>
	</VirtualHardwareSection>
    </VirtualSystem>
</ovf:Envelope>
